--- a/app/src/main/res/layout/activity_outlet.xml
+++ b/app/src/main/res/layout/activity_outlet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.outlet.OutletFragment">
+    tools:context=".ui.outlet.OutletListActivity">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonAddOutlet"
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="none"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/buttonAddOutlet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
