change design in add outlet

--- a/app/src/main/res/layout/activity_add_outlet.xml
+++ b/app/src/main/res/layout/activity_add_outlet.xml
@@ -1,137 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF2F2F2"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.button.MaterialButton
+    <include
+        android:id="@+id/myToolbar"
+        layout="@layout/toolbar" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonGetCurrentLocation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="Fatch Current Location"
+        android:textSize="@dimen/button_text_size"
+        android:textStyle="normal"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_corners_button"
+        app:backgroundTint="@color/socialColorFacebook"
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
+        tools:layout_editor_absoluteX="3dp"/>
+
+
+    <EditText
+        android:id="@+id/editTextOutletName"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Outlet Name"
+        android:padding="6dp"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Fatch Current Location"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputOutletName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Outlet Name"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/buttonGetCurrentLocation"
-        app:layout_constraintStart_toStartOf="@id/buttonGetCurrentLocation"
-        app:layout_constraintEnd_toEndOf="@id/buttonGetCurrentLocation">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextOutletName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputPersonName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Person Name"
-        android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/textInputOutletName"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextPersonName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputContactNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Contact Number"
-        android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/textInputPersonName"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextContactNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputGst"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Gst"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textInputContactNumber"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextGst"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputAddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Primary Address"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textInputGst"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextAddressPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputPinCode"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="PinCode"
-        android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/textInputAddress"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextPinCode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputAddressSecondary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Secondary Address"
-        android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/textInputPinCode"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextAddressSecondary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGetCurrentLocation" />
 
 
-    <com.google.android.material.button.MaterialButton
+    <EditText
+        android:id="@+id/editTextPersonName"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Person Name"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextOutletName" />
+
+    <EditText
+        android:id="@+id/editTextContactNumber"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark" android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Contact Number"
+        android:inputType="number|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />
+
+
+    <EditText
+        android:id="@+id/editTextGst"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter GST Number"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextContactNumber" />
+
+
+    <EditText
+        android:id="@+id/editTextBachNumber"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Bach Number"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextGst" />
+
+
+    <EditText
+        android:id="@+id/editTextAddressPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Primary Address"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBachNumber" />
+
+    <EditText
+        android:id="@+id/editTextPinCode"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Pin Code"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddressPrimary" />
+
+    <EditText
+        android:id="@+id/editTextAddressSecondary"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:padding="6dp"
+        android:gravity="start|center_vertical"
+        android:hint="Enter Secondary Address"
+        android:inputType="text|textNoSuggestions"
+        android:layout_margin="15dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPinCode" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSubmitOutlet"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textInputAddressSecondary"
-        app:layout_constraintStart_toStartOf="@id/textInputOutletName"
-        app:layout_constraintEnd_toEndOf="@id/textInputOutletName"
-        android:text="Submit"/>
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/button_margin"
+        android:background="@drawable/rounded_corners_button"
+        android:text="Submit"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:layout_margin="15dp"
+        android:textSize="@dimen/button_text_size"
+        app:backgroundTint="@color/colorAccentGreen"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddressSecondary"
+        tools:layout_editor_absoluteX="0dp" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -142,6 +202,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
