--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,31 @@
     <color name="loginSignup4colorPrimary">#fe5824</color>
     <color name="loginSignup4colorPrimaryDark">#e94a18</color>
     <color name="loginSignup4colorAccent">#fe5824</color>
+    <color name="lovender">#8B55EA</color>
+    <color name="merganta">#36C7D0</color>
+
+    <color name="layoutBackground">#d9d9d9</color>
+    <color name="layoutBackgroundDark">#cccccc</color>
+    <color name="layoutBackgroundLight">#e0e0e0</color>
+
+    <color name="textColorPrimary">#212121</color>
+    <color name="textColorPrimaryDark">#757575</color>
+    <color name="textColorPrimaryLight">#bfbfbf</color>
+    <color name="textColorSecondary">#757575</color>
+    <color name="textColorSecondaryDark">#212121</color>
+    <color name="textColorSecondaryLight">#666666</color>
+
+    <color name="socialColorGoogle">#dd4b39</color>
+    <color name="socialColorTwitter">#55acee</color>
+    <color name="socialColorFacebook">#3b5998</color>
+    <color name="socialColorLinkedin">#007bb5</color>
+    <color name="socialColorInstagram">#125688</color>
+    <color name="progressGreen">#78c8a1</color>
+    <color name="progressGreenLight">#aed787</color>
+    <color name="progressYellow">#ffd834</color>
+    <color name="progressOrange">#ffb234</color>
+    <color name="progressRed">#ff8b5a</color>
+
+    <color name="colorAccentGreen">#557f5f</color>
+
 </resources>
