--- a/app/src/main/res/layout/activity_add_outlet.xml
+++ b/app/src/main/res/layout/activity_add_outlet.xml
@@ -29,6 +29,21 @@
         app:layout_constraintTop_toBottomOf="@+id/myToolbar"
         tools:layout_editor_absoluteX="3dp"/>
 
+    <Spinner
+        android:id="@+id/selectOutlet"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="center"
+        android:padding="6dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
+        android:autofillHints="Outlet"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGetCurrentLocation" />
 
     <EditText
         android:id="@+id/editTextOutletName"
@@ -45,7 +60,7 @@
         android:textColorHint="@color/textColorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonGetCurrentLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/selectOutlet" />
 
 
     <EditText
