--- a/app/src/main/res/layout/pattern_outlet_category.xml
+++ b/app/src/main/res/layout/pattern_outlet_category.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/rootContraintLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp"
     android:elevation="20dp"
     android:layout_margin="4dp"
     android:background="#FFF2F2F2">
