--- a/app/src/main/res/layout/pattern_outlet_category.xml
+++ b/app/src/main/res/layout/pattern_outlet_category.xml
@@ -45,9 +45,10 @@
                 android:text="text"
                 android:textColor="#fff"
                 android:gravity="center"
+                android:textSize="20sp"
                 android:id="@+id/textViewOutletCategory"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="35dp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
