--- a/app/src/main/res/layout/pattern_outlet_category.xml
+++ b/app/src/main/res/layout/pattern_outlet_category.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/rootContraintLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp"
     android:elevation="16dp"
     android:layout_margin="4dp"
     android:background="@color/white">
 
-   <androidx.appcompat.widget.AppCompatImageView
-       android:id="@+id/imageViewOutletCategory"
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:src="@drawable/ic_notifications_black_24dp"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewOutletCategory"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/stater_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="category"
-        android:textSize="20sp"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/imageViewOutletCategory"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="5dp"
+        android:layout_gravity="center"
+        app:cardMaxElevation="1dp"
+        android:layout_margin="3dp"
+        app:cardElevation="0.7dp"
+        app:contentPaddingBottom="0dp"
+        app:cardPreventCornerOverlap="true"
+        android:background="@color/colorAccent"
+        app:cardUseCompatPadding="true"
+        tools:ignore="MissingConstraints">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageViewOutletCategory"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_launcher_round"
+                />
+            <TextView
+                android:background="@color/socialColorFacebook"
+                android:text="text"
+                android:textColor="#fff"
+                android:gravity="center"
+                android:id="@+id/textViewOutletCategory"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
