--- a/app/src/main/res/layout/activity_add_outlet.xml
+++ b/app/src/main/res/layout/activity_add_outlet.xml
@@ -4,12 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF2F2F2"
+    android:layout_marginTop="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <include
-        android:id="@+id/myToolbar"
-        layout="@layout/toolbar" />
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonGetCurrentLocation"
@@ -23,11 +19,10 @@
         android:textAlignment="center"
         android:gravity="center"
         android:layout_margin="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rounded_corners_button"
         app:backgroundTint="@color/socialColorFacebook"
-        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
-        tools:layout_editor_absoluteX="3dp"/>
+        tools:ignore="MissingConstraints" />
 
     <Spinner
         android:id="@+id/selectOutlet"
@@ -136,6 +131,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextGst" />
 
+    <Spinner
+        android:id="@+id/selectCity"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="center"
+        android:padding="6dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
+        android:autofillHints="Outlet"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBachNumber" />
+
+
+    <Spinner
+        android:id="@+id/selectArea"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="center"
+        android:padding="6dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
+        android:autofillHints="Outlet"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectCity" />
+
 
     <EditText
         android:id="@+id/editTextAddressPrimary"
@@ -153,7 +181,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextBachNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/selectArea" />
 
     <EditText
         android:id="@+id/editTextPinCode"
