--- a/app/src/main/res/layout/pattern_outlet_list.xml
+++ b/app/src/main/res/layout/pattern_outlet_list.xml
@@ -1,88 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/rootContraintLayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp"
-    android:elevation="16dp"
-    android:background="@color/white"
-    android:padding="4dp">
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewOutletId"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:gravity="top|left"
-        android:text="11"
-        android:textStyle="bold"
-        android:padding="4dp"
-        android:textSize="20dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"
-        android:src="@drawable/ic_person_avtar_1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewBusinessName"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Outlet Name"
-        android:layout_marginStart="4dp"
-        android:gravity="left"
-        android:textSize="17sp"
-        app:layout_constraintStart_toEndOf="@id/textViewOutletId"
-        app:layout_constraintEnd_toStartOf="@id/textViewContactPersonName"
-        app:layout_constraintTop_toTopOf="@id/textViewOutletId"/>
+        android:orientation="horizontal"
+        android:weightSum="3"
+        tools:ignore="MissingConstraints">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewContactPersonName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Person Name"
-        android:textSize="17sp"
-        android:layout_marginEnd="4dp"
-        android:textStyle="bold"
-        android:gravity="right"
-        app:layout_constraintStart_toEndOf="@id/textViewBusinessName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textViewBusinessName"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewGSTNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Outlet Name"
-        android:layout_marginStart="4dp"
-        android:gravity="left"
-        android:textSize="17sp"
-        app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
-        app:layout_constraintEnd_toStartOf="@id/textViewContactPersonNumber"
-        app:layout_constraintTop_toBottomOf="@id/textViewBusinessName"/>
+        <LinearLayout
+            android:id="@+id/layout_item_desc"
+            android:layout_width="46dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1.4"
+            android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewContactPersonNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Sub Category"
-        android:textSize="17sp"
-        android:gravity="right"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/textViewGSTNumber"
-        app:layout_constraintEnd_toEndOf="@id/textViewContactPersonName"
-        app:layout_constraintTop_toBottomOf="@id/textViewContactPersonName"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewBusinessName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Business Name"
+                android:textSize="17dp"
+                android:textStyle="bold" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewAddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Outlet Name"
-        android:layout_marginStart="4dp"
-        android:gravity="left"
-        android:textSize="17sp"
-        app:layout_constraintStart_toStartOf="@id/textViewBusinessName"
-        app:layout_constraintEnd_toEndOf="@id/textViewContactPersonName"
-        app:layout_constraintTop_toBottomOf="@id/textViewGSTNumber"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rajkot"
+                    android:layout_marginRight="10dp"
+                    android:textSize="16dp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/pincode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="36003"
+                    android:textSize="16dp" />
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="area address"
+                android:textSize="16dp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery charge: FREE"
+                android:textSize="16dp" />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewOutletId"
+                android:layout_width="78dp"
+                android:layout_gravity="right"
+                android:layout_height="wrap_content"
+                android:background="@drawable/buttons"
+                android:gravity="center_horizontal"
+                android:text="26356"
+                android:layout_marginBottom="2dp"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewContactPersonName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textSize="16dp" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewContactPersonNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="1234567899"
+                android:textStyle="bold"
+                android:textSize="16dp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewGSTNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="JNKF136784"
+                android:textSize="16dp" />
+
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
