change design in add login and outlet list design

--- a/app/src/main/res/layout/pattern_outlet_list.xml
+++ b/app/src/main/res/layout/pattern_outlet_list.xml
@@ -80,8 +80,8 @@
                 android:layout_width="78dp"
                 android:layout_gravity="right"
                 android:layout_height="wrap_content"
-                android:background="@drawable/buttons"
                 android:gravity="center_horizontal"
+                android:background="@color/socialColorFacebook"
                 android:text="26356"
                 android:layout_marginBottom="2dp"
                 android:textColor="#FFFFFF"
