--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_outlet" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_product"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_product" />
 
     <item
         android:id="@+id/navigation_notifications"
