--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/activity_outlet" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.atozcorporation.atoz.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_product"
+        android:name="com.atozcorporation.atoz.ui.product.ProductCategoryFragment"
+        android:label="@string/title_product"
+        tools:layout="@layout/fragment_product_category" />
 
     <fragment
         android:id="@+id/navigation_notifications"
