--- a/app/src/main/res/layout/pattern_outlet_category.xml
+++ b/app/src/main/res/layout/pattern_outlet_category.xml
@@ -6,28 +6,21 @@
     android:id="@+id/rootContraintLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="20dp"
-    android:layout_margin="4dp"
-    android:background="#FFF2F2F2">
+    android:background="#FFF2F2F2"
+    android:layout_margin="8dp"
+    android:padding="4dp">
 
-   <androidx.appcompat.widget.AppCompatImageView
-       android:id="@+id/imageViewOutletCategory"
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:src="@drawable/ic_notifications_black_24dp"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewOutletCategory"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/stater_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="5dp"
         android:layout_gravity="center"
         app:cardMaxElevation="1dp"
-        android:layout_margin="1dp"
+        android:layout_margin="4dp"
         app:cardElevation="0.7dp"
         app:contentPaddingBottom="0dp"
         app:cardPreventCornerOverlap="true"
