--- a/app/src/main/res/layout/activity_add_product_category.xml
+++ b/app/src/main/res/layout/activity_add_product_category.xml
@@ -71,4 +71,11 @@
                 app:backgroundTint="@color/colorAccentGreen"/>
 
         </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
 </RelativeLayout>
