--- a/app/src/main/res/layout/pattern_product_category.xml
+++ b/app/src/main/res/layout/pattern_product_category.xml
@@ -9,9 +9,9 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/category_icon"
-        android:layout_width="75dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_add_image"
         android:layout_margin="10dp"
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="10 Product"
+                android:visibility="gone"
                 android:gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="@color/textColorSecondary"
