--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -6,14 +6,56 @@
     android:layout_height="match_parent"
     tools:context=".ui.product.ProductCategoryFragment">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonAddProductCategory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Add Product Category"
-        app:layout_constraintTop_toTopOf="parent"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/productCategoryName"
+        android:layout_width="160sp"
+        android:layout_height="40dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="12dp"
+        android:gravity="start|center_vertical"
+        android:hint="Category Product"
+        android:inputType="text|textNoSuggestions"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:textAlignment="viewStart"
+        android:textColor="#000"
+        android:textColorHint="#000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/search_editText"
+        android:layout_width="200sp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:drawableStart="@drawable/ic_search"
+        android:drawablePadding="5dp"
+        android:hint="Search"
+        android:imeOptions="actionSearch"
+        android:inputType="textNoSuggestions"
+        android:padding="5dp"
+        android:textColor="@color/textColorSecondaryLight"
+        android:textColorHint="@color/textColorPrimaryDark"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.905"
+        app:layout_constraintStart_toStartOf="@+id/productCategoryName"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_editText"
+        app:layout_constraintVertical_bias="0.019" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_Product_CategoryList"
@@ -21,10 +63,24 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/buttonAddProductCategory"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddProductCategory"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonAddProductCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Add Product Category"
+        android:textSize="20sp"
+        android:layout_margin="10sp"
+        android:textColor="@color/white"
+        android:background="@color/socialColorFacebook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     <ProgressBar
         android:id="@+id/progressBar"
