--- a/app/src/main/res/layout/activity_outlet.xml
+++ b/app/src/main/res/layout/activity_outlet.xml
@@ -9,14 +9,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/categoryName"
-        android:layout_width="130sp"
+        android:layout_width="160sp"
         android:layout_height="40dp"
         android:layout_margin="15dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/rounded_corners_edittext_dark"
         android:gravity="start|center_vertical"
         android:hint="Enter Outlet Name"
         android:inputType="text|textNoSuggestions"
+        android:textSize="20sp"
         android:padding="6dp"
         android:textAlignment="viewStart"
         android:textColor="#000"
@@ -46,6 +46,18 @@
         app:layout_constraintStart_toStartOf="@+id/categoryName"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_editText"
+        app:layout_constraintVertical_bias="0.019" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_Outlet_List"
         android:layout_width="0dp"
@@ -53,7 +65,7 @@
         android:layout_marginTop="10dp"
         android:scrollbars="none"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/search_editText"
+        app:layout_constraintTop_toBottomOf="@id/view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
