--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#FF3B5998</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="button_orange">#fe5824</color>
@@ -60,5 +60,11 @@
     <color name="progressRed">#ff8b5a</color>
 
     <color name="colorAccentGreen">#557f5f</color>
+
+    <color name="colorAccentRed">#ff0000</color>
+    <color name="colorAccentBlue">#03a9f4</color>
+    <color name="colorAccentGrey">#b3b3b3</color>
+    <color name="colorAccentOrange">#f04e42</color>
+    <color name="dividerLight">#cccccc</color>
 
 </resources>
